[package]
name = "anime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
color-eyre = "0.6.3"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "=1.38", features = ["full"] }
dotenv = "0.15.0"
